Added parser of initial string to parts according to input format

--- a/JavascriptFirstTask/index.html
+++ b/JavascriptFirstTask/index.html
@@ -11,7 +11,7 @@
         </h1>
         <p>
             Разработать объект для формирования дат (объект, содержащий набор функций). Объект должен позволять обрабатывать
-            входные данные в виде строки или в виде числа(ms,h).
+            входные данные в виде строки или в виде числа (hours).
         </p>
     </header>
     <main>
