Added input string parser according to found tokens in string

--- a/JavascriptFirstTask/index.html
+++ b/JavascriptFirstTask/index.html
@@ -67,8 +67,9 @@
             <div id="output"></div>
             <div id="result"></div>
         </section>
-    </main>
-    <script src="Content/Scripts/DateFormatter.js"></script>
-    <script src="Content/Scripts/FormatDate.js"></script>
+    </main>           
+    <!--<script src="Content/Scripts/DateFormatter.js"></script>
+    <script src="Content/Scripts/FormatDate.js"></script>--> 
+    <script src="Content/Scripts/ImprovedDateFormatter.js"></script>
 </body>
 </html>
